--- a/JS逆向/02_科凡网登录_闭包.ipynb
+++ b/JS逆向/02_科凡网登录_闭包.ipynb
@@ -28,13 +28,6 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter the password:123456\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "'e10adc3949ba59abbe56e057f20f883e'"
@@ -244,13 +237,10 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d606165cd0af856767b90bbc7a0a49e983a164d2504fab8c5191c5756f55e227"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('venv0': venv)",
+   "display_name": "Python3.9 venv0",
    "language": "python",
-   "name": "python388jvsc74a57bd0efbf56fc117e418e44edda1cb10ef72e1d236bfeb453c90c79d8abd3fc7dd926"
+   "name": "venv0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -262,7 +252,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+   }
   }
  },
  "nbformat": 4,
