--- a/pandas练习题.ipynb
+++ b/pandas练习题.ipynb
@@ -1545,7 +1545,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python venv0",
+   "display_name": "Python3.9 venv0",
    "language": "python",
    "name": "venv0"
   },
