--- a/pandas练习题.ipynb
+++ b/pandas练习题.ipynb
@@ -1545,9 +1545,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.9 venv0",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv0"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1559,7 +1559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
