--- a/办公自动化/自动发送邮件.ipynb
+++ b/办公自动化/自动发送邮件.ipynb
@@ -184,9 +184,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.9 venv0",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
-   "name": "venv0"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
